syntax = "proto3";

option go_package = "week11Lecture30Task/protoserv";

package protoserv;
// service to get data and then send it to the client
service DataGetter{
    rpc ShowData(DataRequest) returns(DataReply){}
}
// request data containing a story`s title and score
message DataRequest{string title = 1; int64 score = 2;}
// response message containing the data about a story
message DataReply{string title = 1; int64 score = 2;}